--- a/code/vhb_markdown.Rmd
+++ b/code/vhb_markdown.Rmd
@@ -3,17 +3,16 @@ title: "Group 2 - merge data sets"
 output: html_document
 ---
 
-getwd()
+data access for anybody that does not have access to the SQL server:
 
-directory <- setwd("../vhb_qear20/")
+```{r readdat}
+#data <- "C:\\Users\\wagne\\Desktop\\vhb_qear20\\data\\MergedDF_all2017.csv"
+#MergedDF_all2017.csv <- read.csv(file= data,header = TRUE, fileEncoding = "UTF-8")
 
-#write.csv(MergedDF_all2017, file.path("./data", "MergedDF_all2017.csv"), row.names = TRUE)
+setwd("../vhb_qear20/data")
+load("MergedDF_all2017.Rda")
 
-#MergedDF_all2017.csv <- read_csv(
-#  "../data/MergedDF_all2017.csv",
-#  col_types = cols()
-#)
-
+```
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -43,41 +42,41 @@ library("pander")
 
 #SQL connection string
 
-con <- dbConnect(odbc::odbc(), .connection_string = "Driver={SQL Server};Server=tcp:vhb20.database.windows.net,1433;
-Database=businessdata;
-Uid=quant_admin;
-Pwd=Deloitte1234;
-Encrypt=yes;
-TrustServerCertificate=no;
-Connection Timeout=30", timeout = 10)
+#con <- dbConnect(odbc::odbc(), .connection_string = "Driver={SQL Server};Server=tcp:vhb20.database.windows.net,1433;
+#Database=businessdata;
+#Uid=quant_admin;
+#Pwd=Deloitte1234;
+#Encrypt=yes;
+#TrustServerCertificate=no;
+#Connection Timeout=30", timeout = 10)
 
 ```
 
 Reading insolvency data in August and September where subject is "Eröffnungen" directly from the database
 ```{r readData}
 
-orbis_raw <- read.csv(
-  "../raw_data/orbis_wrds_de.csv.gz", 
-  header = TRUE,
-  fileEncoding = "UTF-8"
-)
+#orbis_raw <- read.csv(
+#  "../raw_data/orbis_wrds_de.csv.gz", 
+#  header = TRUE,
+#  fileEncoding = "UTF-8"
+#)
 
-orbis_raw_top1000 <- read.csv(
-  "../raw_data/orbis_wrds_de.csv.gz", 
-  header = TRUE,
-  fileEncoding = "UTF-8",
-  nrows = 100000
-)
+#orbis_raw_top1000 <- read.csv(
+#  "../raw_data/orbis_wrds_de.csv.gz", 
+#  header = TRUE,
+#  fileEncoding = "UTF-8",
+#  nrows = 100000
+#)
 
 #Don't change the order here due to error -> https://github.com/r-dbi/odbc/issues/86
 
 #SELECT * FROM dbo.insolvency FULL OUTER JOIN dbo.orbis ON dbo.insolvency.name_debtor = dbo.orbis.name_native WHERE (dbo.orbis.year >= 2017
 
-MergedDF_all2017 <- dbGetQuery(con, "SELECT column1, date, year, closdate, insolvency_court, court_file_number, subject, name_debtor, domicile_debtor, ctryiso, bvdid, name_internat , name_native , major_sector , nace2_main_section , naceccod2 , ussicpcod , category_of_company , status_str , legalfrm , indepind , listed , conscode , filing_type , accpractice , audstatus , source , fias , cuas , stok , debt , ocas , cash , toas , shfd , ncli , culi , loan , cred , ocli , tshf , empl , opre , turn , cost , fipl , taxa , exex , pl FROM orbis_insolvency_merge")
+#MergedDF_all2017 <- dbGetQuery(con, "SELECT column1, date, year, closdate, insolvency_court, court_file_number, subject, name_debtor, domicile_debtor, ctryiso, bvdid, name_internat , name_native , major_sector , nace2_main_section , naceccod2 , ussicpcod , category_of_company , status_str , legalfrm , indepind , listed , conscode , filing_type , accpractice , audstatus , source , fias , cuas , stok , debt , ocas , cash , toas , shfd , ncli , culi , loan , cred , ocli , tshf , empl , opre , turn , cost , fipl , taxa , exex , pl FROM orbis_insolvency_merge")
 
 #SELECT * FROM dbo.insolvency FULL OUTER JOIN dbo.orbis ON dbo.insolvency.name_debtor = dbo.orbis.name_native WHERE (dbo.insolvency.subject = 'Eröffnungen') AND (dbo.insolvency.date >= '2020-08-01') AND (dbo.insolvency.date <= '2020-09-30')
 
-MergedDF_filtered <- dbGetQuery(con, "SELECT column1, date, year, closdate, insolvency_court, court_file_number, subject, name_debtor, domicile_debtor, ctryiso, bvdid, name_internat , name_native , major_sector , nace2_main_section , naceccod2 , ussicpcod , category_of_company , status_str , legalfrm , indepind , listed , conscode , filing_type , accpractice , audstatus , source , fias , cuas , stok , debt , ocas , cash , toas , shfd , ncli , culi , loan , cred , ocli , tshf , empl , opre , turn , cost , fipl , taxa , exex , pl FROM orbis_insolvency_merge_filtered")
+#MergedDF_filtered <- dbGetQuery(con, "SELECT column1, date, year, closdate, insolvency_court, court_file_number, subject, name_debtor, domicile_debtor, ctryiso, bvdid, name_internat , name_native , major_sector , nace2_main_section , naceccod2 , ussicpcod , category_of_company , status_str , legalfrm , indepind , listed , conscode , filing_type , accpractice , audstatus , source , fias , cuas , stok , debt , ocas , cash , toas , shfd , ncli , culi , loan , cred , ocli , tshf , empl , opre , turn , cost , fipl , taxa , exex , pl FROM orbis_insolvency_merge_filtered")
 
 ```
 
@@ -132,19 +131,14 @@ MergedDF_all2017$pl <- as.numeric(MergedDF_all2017$pl)
 ```
 
 
-Saving the data for easier access later on
+Saving the data for easier access later on (cannot be done from code area; either enter local path or run from non-code area)
 ```{r datasave}
 
-write.csv(MergedDF_all2017, file.path("./data", "MergedDF_all2017.csv"), row.names = TRUE)
+#write.csv(MergedDF_all2017, file.path("./data", "MergedDF_all2017.csv"), row.names = TRUE)
 
-insolv <- paste0(getwd(),"/data/MergedDF_all2017.csv")
-MergedDF_all20171 <- read.csv(file = insolv, header = TRUE, fileEncoding = "UTF-8")
+#save(MergedDF_all2017,file="MergedDF_all2017.Rda")
 
 
-MergedDF_all20171 <- read.csv(
- "./data/MergedDF_all2017.csv",
-  col_types = cols()
-)
 
 ```
 
@@ -170,16 +164,16 @@ MergedDF_all2017 %>%
   kable_styling(full_width = FALSE)
 ```
 
-#2) restricting data to subject==Eröffnung only
+2) restricting data to subject==Eröffnung only
 ```{r subsampling}
 subspl <- MergedDF_all2017 %>%
   filter(subject == "Eröffnungen" | is.na(subject))
 ```
 
 
-#3) definition of dummy variables / distinction between solvent and insolvent firms
+3) definition of dummy variables / distinction between solvent and insolvent firms
 
-```{r}
+```{r dumvar}
 subspl <- dummy_cols(subspl, select_columns = 'subject')
 subspl$subject_Eröffnungen[is.na(subspl$subject_Eröffnungen)] <- 0
 subspl$subject_NA[is.na(subspl$subject_NA)] <- 0
@@ -194,29 +188,32 @@ solvent <- subspl %>%
 
 #4) insolvency cases through the lens of major sector
 
-overview sector analysis
-```{r sectrall}
-subspl %>%
-  group_by(subject, major_sector) %>%
-  summarise(N = n(), .groups = "drop")
+overview sector analysis:
+- overview sectors 
+- sectors and their insolvency case openings
+-split major sector according to sovent / insolvent firms
 
+```{r sectrall}
 subspl %>%
   summarytools::freq(subject$major_sector, order = "freq")%>%
   as_tibble(rownames="rowname")
-```
 
-split major sector according to sovent / insolvent firms
-```{r crosssect}
+
+insolvent %>%
+  group_by(subject, major_sector) %>%
+  summarise(N = n(), .groups = "drop")
 
 print(ctable(x = subspl$major_sector, y = subspl$subject_Eröffnungen, prop = "r"),
       method = "render")
 
 ```
 
+
+
 #5) insolvency cases through the lens of the firm's legal form
  
-first, overview of all legal forms and the respective portions of solvent / insolvent firms
-second, insolvent firms only
+- first, overview of all legal forms and the respective portions of solvent / insolvent firms
+- second, insolvent firms only
 
 with the data availabe, it appears that limited liability companies tend to file for insolvency more often
 
@@ -250,7 +247,6 @@ detach(subspl)
 Comparison of mean values across solvent and insolvent firms
 Basis for comparison: total assets, employees, ROA, asset turnover
 ```{r numdataanalysis}
-
 subspl %>%
   group_by(subject) %>%
   summarise(meantoas = mean(toas, na.rm = TRUE),
@@ -271,6 +267,7 @@ pander(res.roa)
 
 res.astu=t.test(insolvent$astu,solvent$astu)
 pander(res.astu)
+
 ```
 
 further investigation of mean variables
